--- a/style.css
+++ b/style.css
@@ -15,3 +15,7 @@
     max-height: 100%;
     
 }
+
+#layer1, #layer2, #layer3, #layer4, #layer5, #layer6, #layer7, #layer8, #layer9, #player, #roei, #yotam, #liad{
+    display: none;
+}
