--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@
 }
 
 #layer1, #layer2, #layer3, #layer4, #layer5, #layer6, #layer7, #layer8, #layer9, #player, #roei, #yotam, #alex, #keva, #sonic, #tsuberi
-, #ptor, #alexFly{
+, #ptor, #alex, #alexFly, #eli, #sword, #shai, #shatz{
     display: none;
 }
 
